--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@stitches/react": "^1.2.8",
     "@types/react-dom": "18.0.10",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -18,8 +19,8 @@
   "devDependencies": {
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
-    "typescript": "^4.9.5",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6"
+    "eslint-config-next": "13.1.6",
+    "typescript": "^4.9.5"
   }
 }
