--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "@stitches/react": "^1.2.8",
     "@types/react-dom": "18.0.10",
+    "keen-slider": "^6.8.5",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
