--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "keen-slider": "^6.8.5",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
