--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "stripe": "^11.9.1"
+    "stripe": "^11.9.1",
+    "use-shopping-cart": "^3.1.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
