--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.11.19",
     "@types/react": "^18.0.27",
+    "typescript": "^4.9.5",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "typescript": "^4.9.5"
+    "eslint-config-next": "13.1.6"
   }
 }
